Updated Selenium dependencies